@@ -3,6 +3,10 @@ CHANGELOG
 ------------------------------------------------------------------------------
 2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>
 
+	* src/lib/gtkui/gtkui.py: Fix closing of the about-dialog.
+
+2006-10-30  Andreas Røsdal  <andrearo@pvv.ntnu.no>
+
 	* textures/glchess.svg:
 	* textures/Makefile.am:
 	* data/glchess.svg:
